# WebWM

./: BAR_GUIDE.md  BAR_RENDERING.md  Cargo.toml  DEVELOPMENT.md  DRM_STATUS.md  DRM_SUCCESS.md  INPUT.md  INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  WORKSPACES.md  cargo.toml  config.rs  quick_fix.sh  run-standalone.sh  webwm.desktop
config/: config.js  desktop.xml  style.css  test.js
scripts/: test.sh
src/: main.rs  state.rs
src/compositor/: backend.rs  bar.rs  bar_element.rs  bar_renderer.rs  drm_backend.rs  full_drm_backend.rs  input.rs  input.rs.backup  mod.rs  renderer.rs  workspace.rs
src/config/: config.rs  css_parser.rs  js_runtime.rs  mod.rs  xml_parser.rs
