[package]
name = "webwm"
version = "0.5.0"
edition = "2021"
authors = ["WebWM Contributors"]
license = "MIT"
description = "A Wayland compositor configured with web technologies (XML, CSS, JavaScript)"
repository = "https://github.com/bosseschum/webwm"

[dependencies]
# Wayland compositor framework - UPDATED to working version
smithay = { git = "https://github.com/Smithay/smithay", features = ["backend_winit", "wayland_frontend", "desktop", "renderer_glow"] }

# Window system
wayland-server = "0.31"
wayland-protocols = { version = "0.31", features = ["server"] }

# Utilities  
calloop = "0.13"
log = "0.4"
env_logger = "0.11"

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML parsing
roxmltree = "0.19"

# CSS parsing
cssparser = "0.31"

# JavaScript runtime
rquickjs = { version = "0.4", features = ["array-buffer", "classes"] }

# Utilities
thiserror = "1.0"

[[bin]]
name = "webwm"
path = "src/main.rs"
